--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+target
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -8,5 +9,11 @@
 *.war
 *.ear
 
+# Hidden Files #
+.*
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Mac filesystem things #
+.DS_Store
