--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -1,17 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>com.reincarnation</groupId>
-		<artifactId>cache</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
+  <parent>
+    <groupId>com.reincarnation.cache</groupId>
+    <artifactId>parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
 
-	<artifactId>cache-benchmark</artifactId>
+  <artifactId>cache-benchmark</artifactId>
   <packaging>jar</packaging>
 
-  <name>TR-Recode Cache Library Benchmarks</name>
+  <name>TR-Recode Cache (Benchmarks)</name>
 
   <properties>
        <!--
@@ -26,102 +26,91 @@
   </properties>
 
   <dependencies>
-		<dependency>
-			<groupId>com.reincarnation</groupId>
-			<artifactId>cache-core</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openjdk.jmh</groupId>
-			<artifactId>jmh-core</artifactId>
-			<version>${jmh.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openjdk.jmh</groupId>
-			<artifactId>jmh-generator-annprocess</artifactId>
-			<version>${jmh.version}</version>
-			<scope>provided</scope>
-		</dependency>
+    <dependency>
+      <groupId>com.reincarnation.cache</groupId>
+      <artifactId>cache</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.openjdk.jmh</groupId>
+      <artifactId>jmh-core</artifactId>
+      <version>${jmh.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjdk.jmh</groupId>
+      <artifactId>jmh-generator-annprocess</artifactId>
+      <version>${jmh.version}</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
-   <build>
-       <plugins>
-           <plugin>
-               <groupId>org.apache.maven.plugins</groupId>
-               <artifactId>maven-shade-plugin</artifactId>
-               <version>2.2</version>
-               <executions>
-                   <execution>
-                       <phase>package</phase>
-                       <goals>
-                           <goal>shade</goal>
-                       </goals>
-                       <configuration>
-                           <finalName>${uberjar.name}</finalName>
-                           <transformers>
-                               <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                   <mainClass>org.openjdk.jmh.Main</mainClass>
-                               </transformer>
-                           </transformers>
-                           <filters>
-                               <filter>
-                                   <!--
-                                       Shading signed JARs will fail without this.
-                                       http://stackoverflow.com/questions/999489/invalid-signature-file-when-attempting-to-run-a-jar
-                                   -->
-                                   <artifact>*:*</artifact>
-                                   <excludes>
-                                       <exclude>META-INF/*.SF</exclude>
-                                       <exclude>META-INF/*.DSA</exclude>
-                                       <exclude>META-INF/*.RSA</exclude>
-                                   </excludes>
-                               </filter>
-                           </filters>
-                       </configuration>
-                   </execution>
-               </executions>
-           </plugin>
-       </plugins>
-       <pluginManagement>
-           <plugins>
-               <plugin>
-                   <artifactId>maven-clean-plugin</artifactId>
-                   <version>2.5</version>
-               </plugin>
-               <plugin>
-                   <artifactId>maven-deploy-plugin</artifactId>
-                   <version>2.8.1</version>
-               </plugin>
-               <plugin>
-                   <artifactId>maven-install-plugin</artifactId>
-                   <version>2.5.1</version>
-               </plugin>
-               <plugin>
-                   <artifactId>maven-jar-plugin</artifactId>
-                   <version>2.4</version>
-               </plugin>
-               <plugin>
-                   <artifactId>maven-javadoc-plugin</artifactId>
-                   <version>2.9.1</version>
-               </plugin>
-               <plugin>
-                   <artifactId>maven-resources-plugin</artifactId>
-                   <version>2.6</version>
-               </plugin>
-               <plugin>
-                   <artifactId>maven-site-plugin</artifactId>
-                   <version>3.3</version>
-               </plugin>
-               <plugin>
-                   <artifactId>maven-source-plugin</artifactId>
-                   <version>2.2.1</version>
-               </plugin>
-               <plugin>
-                   <artifactId>maven-surefire-plugin</artifactId>
-                   <version>2.17</version>
-               </plugin>
-           </plugins>
-       </pluginManagement>
-   </build>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>net.bytebuddy</groupId>
+        <artifactId>byte-buddy-maven-plugin</artifactId>
+        <version>1.6.9</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>transform</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <transformations>
+            <transformation>
+              <plugin>com.reincarnation.cache.enhancer.CachePlugin</plugin>
+              <groupId>com.reincarnation.cache</groupId>
+              <artifactId>cache-enhancer</artifactId>
+              <version>0.0.1-SNAPSHOT</version>
+            </transformation>
+          </transformations>
+          <!-- Optionally, add 'initialization' block with EntryPoint class -->
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.2</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <finalName>${uberjar.name}</finalName>
+              <transformers>
+                <transformer
+                  implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>org.openjdk.jmh.Main</mainClass>
+                </transformer>
+              </transformers>
+              <filters>
+                <filter>
+                  <!-- Shading signed JARs will fail without this. http://stackoverflow.com/questions/999489/invalid-signature-file-when-attempting-to-run-a-jar -->
+                  <artifact>*:*</artifact>
+                  <excludes>
+                    <exclude>META-INF/*.SF</exclude>
+                    <exclude>META-INF/*.DSA</exclude>
+                    <exclude>META-INF/*.RSA</exclude>
+                  </excludes>
+                </filter>
+              </filters>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
