--- a/enhancer/pom.xml
+++ b/enhancer/pom.xml
@@ -25,7 +25,7 @@
     </dependency>
     <dependency>
       <groupId>com.reincarnation.cache</groupId>
-      <artifactId>inceptor-annotation</artifactId>
+      <artifactId>interceptor-annotation</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
