--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.reincarnation.cache</groupId>
     <artifactId>parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>cache-benchmark</artifactId>
@@ -71,7 +71,7 @@
               <plugin>com.reincarnation.cache.enhancer.CachePlugin</plugin>
               <groupId>com.reincarnation.cache</groupId>
               <artifactId>cache-enhancer</artifactId>
-              <version>0.0.1-SNAPSHOT</version>
+              <version>${project.version}</version>
             </transformation>
           </transformations>
           <!-- Optionally, add 'initialization' block with EntryPoint class -->
