--- a/pom.xml
+++ b/pom.xml
@@ -4,23 +4,22 @@
 
   <groupId>com.reincarnation.cache</groupId>
   <artifactId>parent</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>TR Recode Cache (Parent)</name>
 
   <properties>
-    <project.version>0.0.1-SNAPSHOT</project.version>
+    <project.version>0.1.0-SNAPSHOT</project.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!--
         Java source/target to use for compilation.
       -->
     <javac.target>1.8</javac.target>
-    <!-- <project.version>0.0.1-SNAPSHOT</project.version>  -->
   </properties>
 
   <modules>
-    <module>inceptor-annotation</module>
+    <module>interceptor-annotation</module>
     <module>core</module>
     <module>enhancer</module>
     <module>benchmark</module>
