--- a/interceptor-annotation/pom.xml
+++ b/interceptor-annotation/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.reincarnation.cache</groupId>
     <artifactId>parent</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
   </parent>
   <artifactId>interceptor-annotation</artifactId>
   <name>TR-Recode Cache (Interceptor Annotation)</name>
