--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 
   <groupId>com.reincarnation.cache</groupId>
   <artifactId>parent</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
   <packaging>pom</packaging>
 
   <name>TR Recode Cache (Parent)</name>
 
   <properties>
-    <project.version>0.1.0-SNAPSHOT</project.version>
+    <project.version>0.1.0</project.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <!--
         Java source/target to use for compilation.
